[tool.poetry]
name = "streaming-loss"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"
tqdm = "^4.41.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
